fix: one more image file path not fixed in JS, also tested on mobile phones and media Q need adjusting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -637,7 +637,7 @@ input:checked + label {
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 500px) {
     h1 {
         font-size: 23px;
         margin: 8px;
